Изменен файл index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-   <title>My_Eplan</title>
+   <title>Eplan</title>
    <link href="style.css" rel="stylesheet">
    <meta property="og:title" content="Eplan описание" />
     <meta property="og:description" content="Самоучитель для работы с программой EPLAN" />
